<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Server port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="server_address">Server address</string>
    <string name="client_server_port">Server port</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="set">SET</string>
    <string name="reset">RESET</string>
    <string name="poll">POLL</string>
</resources>